--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ img {
 
 .info-paragraph {
     flex-grow: 1;
-    margin-top: 30px;
+    margin: 30px 0;
     line-height: 1.6;
     color: var(--slightly-transparent-white-1);
 }
@@ -76,6 +76,7 @@ img {
 /* Card | Info | Numbers */
 .info-numbers {
     display: flex;
+    flex-wrap: wrap;
     gap: 62px;
 }
 
@@ -104,23 +105,27 @@ img {
 
 .card-picture {
     position: relative;
+    background-color: var(--soft-violet);
 }
 
 .picture-img {
-    width: 100%;
+    object-fit: cover;
+    max-width: 100%;
     height: 100%;
+    mix-blend-mode: multiply;
+    opacity: 0.8;
 }
 
 .picture-color {
-    background-color: hsla(280, 94%, 25%, 0.55);
+    /* background-color: hsla(280, 94%, 25%, 0.55);
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: absolute; */
+    display: none;
 }
 
 /* Mobile Design */
 @media (max-width: 720px) {
-
     /* Card */
     .card {
         width: 87%;
@@ -141,12 +146,11 @@ img {
     }
 
     .info-paragraph {
-        margin-top: 20px;
+        margin: 20px 0 40px;
     }
 
     /* Card | Info | Numbers */
     .info-numbers {
-        margin-top: 40px;
         flex-direction: column;
         gap: 30px;
     }
